# DevTerminal

./: .gitignore  README.md  pyproject.toml
devcli/: __init__.py  main.py
devcli/completion/: __init__.py  completer.py  suggester.py
devcli/core/: __init__.py  executor.py  history.py  shell.py
devcli/os_layer/: __init__.py  adapter.py  commands.py  detector.py
devcli/validation/: __init__.py  path_validator.py
tests/: test_executor.py
